dependency upgrade fixes, add supoprt for io.sh and io.shell